--- a/style.css
+++ b/style.css
@@ -145,15 +145,6 @@ nav .cl_a:nth-child(1){
 	background: #c9c9c8;
 }
 
-
-
-
-
-
-
-
-
-
 /* Header_banner */
 .Header_banner h1 {
 	font-size: 78px;
@@ -287,6 +278,11 @@ main{
 	font-size: 14px;
 	display: inline-block;
 	margin-top: 20px;
+	transition: .4s;
+}
+.about_button:hover{
+	background: #c69453;
+	color: #fff;
 }
 
 /* Quote Section  */
